change to Java 21