@@ -1,18 +1,32 @@
 plugins {
-	id 'org.springframework.boot' version '3.1.0'
-	id 'io.spring.dependency-management' version '1.1.0'
+    id 'java'
+	id 'org.springframework.boot' version '3.1.5'
+	id 'io.spring.dependency-management' version '1.1.3'
+    id 'org.graalvm.buildtools.native' version '0.9.28'
+//     id 'org.gradle.toolchains.foojay-resolver-convention' version '0.4.0'
 }
 
-group = 'com.charkuils'
+group = 'com.jo'
 version = '0.0.1'
 
-apply plugin: 'java'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: 'java-library'
+// apply plugin: 'java'
+// apply plugin: 'io.spring.dependency-management'
+// apply plugin: 'java-library'
 
 java {
-	sourceCompatibility = '17'
-	targetCompatibility = '17'
+// 	sourceCompatibility = '21'
+// 	targetCompatibility = '21'
+    toolchain { 
+        languageVersion = JavaLanguageVersion.of(21) 
+    }
+}
+
+graalvmNative {
+    binaries {
+        main {
+            buildArgs.add('--enable-preview')
+        }
+    }
 }
 
 jar {
@@ -33,8 +47,8 @@ ext {
 
 dependencies {
     // Lombok
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
     // Spring
     implementation 'org.springframework.boot:spring-boot-starter-web'
